examples/syntax_error/synerror3.u
void putint(int i);


void main()
{
	int i;
	for (i = 0, i < 7; ++i)
		putint(i);
}
